Feature/audit logging (#177)
* AuditEvent logic

GenericDynamicFilterRepository for dynamic filtering
CRUD for AuditEvent
publishEvent for transfer process and policy decision

* Refactored PolicyDecision Audit logic

* Added ContractNegotiation State check

When enforcing agreement, check if negotiation is finalized, next to it must be present
Updated GHA
Added tests

* Added publish AuditEvent for contract negotiation flow

Updated tests
Added request in a postman collection

* Contract Negotiation AuditEvent

Added publish events for protocol, consumer nad provider flow

* Data Transfer AuditEvent

Covered API and protocol flow with AuditEvents
Updated tests